# slam_bot

./: CMakeLists.txt  README.md
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: amcl.launch  localization.launch  mapping.launch  move.launch  robot_description.xml  rtab_run  rviz.launch  slam.launch  teleop
maps/: jackal_race.yaml
meshes/: link_wheel_BR.STL
slam_bot_initial/: CMakeLists.txt  package.xml
slam_bot_initial/config/: joint_names_slam_bot.yaml
slam_bot_initial/launch/: display.launch  gazebo.launch
slam_bot_initial/meshes/: base_link.STL  camera.STL  link_wheel_BL.STL  link_wheel_FL.STL  link_wheel_FR.STL
slam_bot_initial/urdf/: slam_bot.csv  slam_bot.urdf
src/: navigation_goal.cpp
urdf/: slam_bot.gazebo.xacro  slam_bot.xacro
